@@ -24,11 +24,15 @@
 
 ! KGySoft.Drawing.ImagingTools.exe
 ==================================
+* UI changes:
+
 * Debugger Visualizer Installations dialog:
   * Installing the classic debugger visualizer for Visual Studio 2022 or higher asks for confirmation because the
     extension-based visualizers from Visual Studio Marketplace are recommended.
++ Edit Resources window:
+  + New 'Hide Dependent Resources' check box.
 
-API changes:
+! API changes:
 
 ! KGySoft.Drawing.ImagingTools.ViewModel namespace:
 ---------------------------------------------------
